Fix text overflow

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -44,7 +44,8 @@
 	padding: 0;
 
 	.blog-post {
-		display: inline-block;
+		display: flex;
+		flex-flow: column nowrap;
 		padding: 20px;
 		border: 1px solid $blackish;
 		box-shadow: 4px 4px 0 $blackish;
